--- a/src/ContactBundle/Resources/views/Contact/index.html.twig
+++ b/src/ContactBundle/Resources/views/Contact/index.html.twig
@@ -2,13 +2,57 @@
 
 {% block body %}
 
-<div class="row form">
-    <div id="lang_switch">
+<div class="form">
+    <div id="lang_switch" align="right">
         <a href="{{ path('contact_lang', { '_locale': 'en' }) }}">EN</a> |
         <a href="{{ path('contact_lang', { '_locale': 'de' }) }}">DE</a>
     </div>
-    <div>
-        {{ form(form) }}
+    <div id="form">
+        {{ form_start(form) }}
+          <div class="form-group">
+              {{ form_label(form.name) }}
+              {{ form_widget(form.name) }}
+              {{ form_errors(form.name) }}
+          </div>
+          <div class="form-group">
+              {{ form_label(form.first_name) }}
+              {{ form_widget(form.first_name) }}
+              {{ form_errors(form.first_name) }}
+          </div>
+          <div class="form-group">
+              {{ form_label(form.company) }}
+              {{ form_widget(form.company) }}
+              {{ form_errors(form.company) }}
+          </div>
+          <div class="form-group">
+              {{ form_label(form.email) }}
+              {{ form_widget(form.email) }}
+              {{ form_errors(form.email) }}
+          </div>
+          <div class="form-group">
+              {{ form_label(form.phone_number) }}
+              {{ form_widget(form.phone_number) }}
+              {{ form_errors(form.phone_number) }}
+          </div>
+          <div class="form-group">
+              {{ form_label(form.message) }}
+              {{ form_widget(form.message) }}
+              {{ form_errors(form.message) }}
+          </div>
+          <div class="form-group">
+              {{ form_label(form.send_copy) }}
+              {{ form_widget(form.send_copy) }}
+              {{ form_errors(form.send_copy) }}
+          </div>
+          <div class="form-group">
+              {{ form_label(form.recaptcha) }}
+              {{ form_widget(form.recaptcha) }}
+              {{ form_errors(form.recaptcha) }}
+          </div>
+          <div align="right">
+              {{ form_row(form.send) }}
+          </div>
+        {{ form_end(form) }}
     </div>
 </div>
 
